--- a/booking_doctor.html
+++ b/booking_doctor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,11 +7,51 @@
     <!-- ? Main CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="sass/style.min.css" />
+    <!-- <link rel="stylesheet" href="sass/style.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
     <!-- ? Main CSS -->
+
+    <script>
+      if (localStorage.getItem("lang") == "ar") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style_rtl.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else if (localStorage.getItem("lang") == "en") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      }
+    </script>
 
     <!-- ? Main JavaScript -->
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -97,38 +137,17 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="branches.html">Address</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="service.html">Services</a>
+            </li>
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Medical Provider
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">test</a></li>
-                <li><a class="dropdown-item" href="#">test</a></li>
-              </ul>
+              <a class="nav-link" href="offers.html">Offers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Training Academy</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Library
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">test</a></li>
-                <li><a class="dropdown-item" href="#">test</a></li>
-              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact-us.html">Contact us</a>
@@ -136,7 +155,6 @@
           </ul>
           <div class="auth">
             <a href="signup.html" class="signup_btn btn">Sign up</a>
-            <a href="login.html" class="login_btn btn">Login</a>
             <!-- start lang -->
             <div class="dropdown lang">
               <button
@@ -148,8 +166,28 @@
                 Arabic
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Arabic</a></li>
-                <li><a class="dropdown-item" href="#">English</a></li>
+                <li>
+                  <a class="dropdown-item" onclick="changeLocaleAr()">Arabic</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" onclick="changeLocaleEn()"
+                    >English</a
+                  >
+                </li>
+                <script>
+                  function changeLocaleAr() {
+                    localStorage.setItem("lang", "ar");
+                    location.reload();
+                  }
+                  function changeLocaleEn() {
+                    localStorage.setItem("lang", "en");
+                    location.reload();
+                  }
+                  function readLang() {
+                    var lang = localStorage.getItem("lang");
+                    document.getElementById("langHtml").innerHTML = lang;
+                  }
+                </script>
               </ul>
             </div>
             <!-- End lang -->
@@ -180,73 +218,103 @@
 
     <!-- Start Doctor booking -->
     <section class="booking_doctor">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 col-12">
-                    <form action="booking_information.html" class="personal_information">
-                        <h6>Personal information</h6>
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <img src="./media/image/google.png" alt="google"> Continue With Google
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="./media/image/apple.png" alt="apple"> Continue With Apple
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="./media/image/twitter.png" alt="google"> Continue With Twitter
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="or">OR</div>
-                        <div class="form-group">
-                            <i class="fa-solid fa-user"></i>
-                          <input type="text" name="" id="" class="form-control" placeholder="your full name">
-                        </div>
-                        <div class="form-group">
-                            <i class="fa-solid fa-phone"></i>
-                          <input type="text" name="" id="" class="form-control" placeholder="your phone number">
-                        </div>
-                        <div class="form-group">
-                            <i class="fa-solid fa-envelope"></i>
-                          <input type="email" name="" id="" class="form-control" placeholder="your email address (optional)">
-                        </div>
-                        <button type="submit" class="btn submit_btn">Book Now</button>
-                    </form>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 col-12">
+            <form
+              action="booking_information.html"
+              class="personal_information"
+            >
+              <h6>Personal information</h6>
+              <ul>
+                <li>
+                  <a href="#">
+                    <img src="./media/image/google.png" alt="google" /> Continue
+                    With Google
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./media/image/apple.png" alt="apple" /> Continue
+                    With Apple
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="./media/image/twitter.png" alt="google" />
+                    Continue With Twitter
+                  </a>
+                </li>
+              </ul>
+              <div class="or">OR</div>
+              <div class="form-group">
+                <i class="fa-solid fa-user"></i>
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  class="form-control"
+                  placeholder="your full name"
+                />
+              </div>
+              <div class="form-group">
+                <i class="fa-solid fa-phone"></i>
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  class="form-control"
+                  placeholder="your phone number"
+                />
+              </div>
+              <div class="form-group">
+                <i class="fa-solid fa-envelope"></i>
+                <input
+                  type="email"
+                  name=""
+                  id=""
+                  class="form-control"
+                  placeholder="your email address (optional)"
+                />
+              </div>
+              <button type="submit" class="btn submit_btn">Book Now</button>
+            </form>
+          </div>
+          <div class="col-lg-5 col-12">
+            <div class="booking_summery">
+              <h6>Booking summery</h6>
+              <div class="card_doctor">
+                <img src="./media/image/doctors1.jpg" alt="doctors" />
+                <div class="details_doctor">
+                  <p class="title">Doctor . Adham Abdulreahman</p>
+                  <div class="rates">
+                    <i class="fa-solid fa-star active"></i>
+                    <i class="fa-solid fa-star active"></i>
+                    <i class="fa-solid fa-star active"></i>
+                    <i class="fa-solid fa-star active"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <span>(1120 reviews)</span>
+                  </div>
+                  <span class="address"
+                    >ElDamam Branch , Jasmine District , A2esha …..</span
+                  >
                 </div>
-                <div class="col-lg-5 col-12">
-                    <div class="booking_summery">
-                        <h6>Booking summery</h6>
-                        <div class="card_doctor">
-                            <img src="./media/image/doctors1.jpg" alt="doctors">
-                            <div class="details_doctor">
-                                <p class="title">Doctor . Adham Abdulreahman</p>
-                                <div class="rates">
-                                    <i class="fa-solid fa-star active"></i>
-                                    <i class="fa-solid fa-star active"></i>
-                                    <i class="fa-solid fa-star active"></i>
-                                    <i class="fa-solid fa-star active"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <span>(1120 reviews)</span>
-                                </div>
-                                <span class="address">ElDamam Branch , Jasmine District , A2esha …..</span>
-                            </div>
-                        </div>
-                        <div class="booking_time">
-                            <div class="book">
-                                <h6>Booking Time</h6>
-                                <div class="time"><i class="fa-solid fa-calendar-days"></i>Sat 22/3 - 4:30 Pm</div>
-                            </div>
-                            <a href="doctor_details.html" class="booking_btn btn">Change Date <i class="fa-solid fa-arrow-right-long"></i></a>
-                        </div>
-                    </div>
+              </div>
+              <div class="booking_time">
+                <div class="book">
+                  <h6>Booking Time</h6>
+                  <div class="time">
+                    <i class="fa-solid fa-calendar-days"></i>Sat 22/3 - 4:30 Pm
+                  </div>
                 </div>
+                <a href="doctor_details.html" class="booking_btn btn"
+                  >Change Date <i class="fa-solid fa-arrow-right-long"></i
+                ></a>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- End Doctor booking -->
 
