--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,11 +7,91 @@
     <!-- ? Main CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="sass/style.min.css" />
+    <!-- <link rel="stylesheet" href="sass/style.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
     <!-- ? Main CSS -->
+
+    <script>
+      if (localStorage.getItem("lang") == "ar") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style_rtl.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else if (localStorage.getItem("lang") == "en") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      }
+    </script>
+
+    <script>
+      if (localStorage.getItem("lang") == "ar") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style_rtl.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else if (localStorage.getItem("lang") == "en") {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      } else {
+        var cssId = "myCss"; // you could encode the css path itself to generate id..
+        if (!document.getElementById(cssId)) {
+          var head = document.getElementsByTagName("head")[0];
+          var link = document.createElement("link");
+          link.id = cssId;
+          link.rel = "stylesheet";
+          link.type = "text/css";
+          link.href = "sass/style.min.css";
+          link.media = "all";
+          head.appendChild(link);
+        }
+      }
+    </script>
 
     <!-- ? Main JavaScript -->
     <script src="js/jquery-3.5.1.min.js"></script>
@@ -97,38 +177,17 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="branches.html">Address</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="service.html">Services</a>
+            </li>
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Medical Provider
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">test</a></li>
-                <li><a class="dropdown-item" href="#">test</a></li>
-              </ul>
+              <a class="nav-link" href="offers.html">Offers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Training Academy</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Library
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">test</a></li>
-                <li><a class="dropdown-item" href="#">test</a></li>
-              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact-us.html">Contact us</a>
@@ -136,7 +195,6 @@
           </ul>
           <div class="auth">
             <a href="signup.html" class="signup_btn btn">Sign up</a>
-            <a href="login.html" class="login_btn btn">Login</a>
             <!-- start lang -->
             <div class="dropdown lang">
               <button
@@ -148,8 +206,28 @@
                 Arabic
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Arabic</a></li>
-                <li><a class="dropdown-item" href="#">English</a></li>
+                <li>
+                  <a class="dropdown-item" onclick="changeLocaleAr()">Arabic</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" onclick="changeLocaleEn()"
+                    >English</a
+                  >
+                </li>
+                <script>
+                  function changeLocaleAr() {
+                    localStorage.setItem("lang", "ar");
+                    location.reload();
+                  }
+                  function changeLocaleEn() {
+                    localStorage.setItem("lang", "en");
+                    location.reload();
+                  }
+                  function readLang() {
+                    var lang = localStorage.getItem("lang");
+                    document.getElementById("langHtml").innerHTML = lang;
+                  }
+                </script>
               </ul>
             </div>
             <!-- End lang -->
@@ -640,66 +718,66 @@
     <section class="partners">
       <div class="container">
         <!-- Swiper -->
-    <div class="swiper partnerSwiper">
-      <div class="swiper-wrapper">
-        <!-- For loop this logo-->
-        <div class="swiper-slide">
-          <img src="./media/image/partner/logo.png" alt="logo">
-        </div>
-        <!-- For loop this logo-->
+        <div class="swiper partnerSwiper">
+          <div class="swiper-wrapper">
+            <!-- For loop this logo-->
+            <div class="swiper-slide">
+              <img src="./media/image/partner/logo.png" alt="logo" />
+            </div>
+            <!-- For loop this logo-->
 
-        <!-- For loop this logo-->
-        <div class="swiper-slide">
-          <img src="./media/image/partner/logo1.png" alt="logo">
-        </div>
-        <!-- For loop this logo-->
+            <!-- For loop this logo-->
+            <div class="swiper-slide">
+              <img src="./media/image/partner/logo1.png" alt="logo" />
+            </div>
+            <!-- For loop this logo-->
 
-        <!-- For loop this logo-->
-        <div class="swiper-slide">
-          <img src="./media/image/partner/logo2.png" alt="logo">
-        </div>
-        <!-- For loop this logo-->
+            <!-- For loop this logo-->
+            <div class="swiper-slide">
+              <img src="./media/image/partner/logo2.png" alt="logo" />
+            </div>
+            <!-- For loop this logo-->
 
-        <!-- For loop this logo-->
-        <div class="swiper-slide">
-          <img src="./media/image/partner/logo3.png" alt="logo">
-        </div>
-        <!-- For loop this logo-->
+            <!-- For loop this logo-->
+            <div class="swiper-slide">
+              <img src="./media/image/partner/logo3.png" alt="logo" />
+            </div>
+            <!-- For loop this logo-->
 
-        <!-- For loop this logo-->
-        <div class="swiper-slide">
-          <img src="./media/image/partner/logo4.png" alt="logo">
+            <!-- For loop this logo-->
+            <div class="swiper-slide">
+              <img src="./media/image/partner/logo4.png" alt="logo" />
+            </div>
+            <!-- For loop this logo-->
+          </div>
         </div>
-        <!-- For loop this logo-->
-      </div>
-    </div>
 
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".partnerSwiper", {
-        slidesPerView: 5,
-        spaceBetween: 30,
-        loop: true,
-        breakpoints: {
-          300: {
-            slidesPerView: 2,
-          },
-          
-          768: {
-            slidesPerView: 3,
-          },
-          
-          1024: {
+        <!-- Initialize Swiper -->
+        <script>
+          var swiper = new Swiper(".partnerSwiper", {
             slidesPerView: 5,
             spaceBetween: 30,
-          },
-        },
-        autoplay: {
-          delay: 5000,
-          disableOnInteraction: false,
-        },
-      });
-    </script>
+            loop: true,
+            breakpoints: {
+              300: {
+                slidesPerView: 2,
+              },
+
+              768: {
+                slidesPerView: 3,
+              },
+
+              1024: {
+                slidesPerView: 5,
+                spaceBetween: 30,
+              },
+            },
+            autoplay: {
+              delay: 5000,
+              disableOnInteraction: false,
+            },
+          });
+        </script>
       </div>
     </section>
     <!-- End Partners -->
