--- a/single-vedio.html
+++ b/single-vedio.html
@@ -198,85 +198,147 @@
       <div class="container">
         <div class="content">
           <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
-          <span>Library</span>
+          <a href="#">Library</a>
+          <span> / News</span>
         </div>
       </div>
     </section>
     <!-- FINISH BREADCRUMB -->
 
-    <!-- start single blog header -->
-    <div class="header_blog">
-      <div class="container">
-        <div class="main_content_start">
-          <h2>A Great Place For Dental Health For You And Your Family</h2>
-          <p>
-            Medicate is a long established fact that a reader will be distracted
-            by the readable content of a page when looking at its layout. Lorem
-            Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry’s standard dummy text ever since.
-          </p>
-        </div>
-      </div>
-    </div>
-    <!-- finish single blog header -->
-
-    <!-- start single blog indication -->
-    <section class="indection_blog">
-      <div class="container">
-        <ul>
-          <li><a class="link" href="news.html">News</a></li>
-          <li><a class="link" href="guide.html">Guide Library</a></li>
-          <li><a class="link active" href="video.html">Video Guides</a></li>
-        </ul>
-      </div>
-    </section>
-    <!-- finish single blog indication -->
-    <!-- start single blog section -->
-    <div class="blog_section">
+    <!-- start form sign  -->
+    <section class="single_blog">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-12">
-            <div class="content">
+          <!-- start col -->
+          <div class="col-lg-8 col-md-12 col-12">
+            <!-- start content -->
+            <div class="content_blog">
+              <h2>Latest Equipments For The Heart Treatments</h2>
               <div class="img">
                 <img src="media/image/service1.jpg" alt="service" />
-                <span class="tag">Videos Libraries</span>
+                <button id="play-video" class="video-play-button">
+                  <span></span>
+                </button>
               </div>
-             
-              <div class="info">
-                <p><i class="fas fa-calendar-day"></i> 22 may, 2022</p>
-                <p><i class="fa-regular fa-user"></i> Dr. Ahmed Abdul malek</p>
+              <!-- video model -->
+              <div id="video-overlay" class="video-overlay">
+                <a class="video-overlay-close">&times;</a>
               </div>
-              <h3 class="text">Latest Equipments For The Heart Treatments</h3>
-              <p class="parg">
+              <!-- video model -->
+              <p>
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod orem ipsum dolor sit amet, consetetur elitr,
                 sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur
                 sadipscing elitr, sed diam nonumy eirmod orem ipsum dolor sit
-                amet, consetetur elitr, sed diam nonumy eirmod
+                amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor
+                sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy
+                eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                sed diam nonumy eirmod orem ipsum dolor sit amet, consetetur
+                elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
+                dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem
+                ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                nonumy eirmod orem ipsum dolor sit amet, consetetur elitr, sed
+                diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur
+                sadipscing elitr, sed diam nonumy eirmod orem ipsum dolor sit
+                amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor
+                sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy
+                eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                sed diam nonumy eirmod orem ipsum dolor sit amet, consetetur
+                elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
+                dolor sit amet, consetetur elitr, sed diam nonumy eirmod Lorem
+                ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                nonumy eirmod orem ipsum dolor sit amet, consetetur elitr, sed
+                diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur
+                sadipscing elitr, sed diam nonumy eirmod orem ipsum dolor sit
+                amet, consetetur elitr, sed diam nonumy eirmod Lorem ipsum dolor
+                sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                orem ipsum dolor sit amet, consetetur elitr, sed diam nonumy
+                eirmod Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                sed diam nonumy
               </p>
-              <div class="button">
-                <a href="single-blog.html" class="btn second">
-                  Read More <i class="fa-solid fa-plus"></i
-                ></a>
-              </div>
             </div>
+            <!-- finish content -->
           </div>
+          <!-- finish col -->
+          <!-- start col -->
+
+          <div class="col-lg-4 col-md-12 col-12">
+            <!-- sidebar -->
+            <div class="sidebar_blog">
+              <div class="simallair_hrader">Similar News</div>
+              <!-- blog -->
+              <div class="box">
+                <img src="media/image/blog1.png" alt="blog" />
+
+                <div class="info">
+                  <div class="date">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <span>22 may, 2022</span>
+                  </div>
+                  <div class="date">
+                    <i class="fa-regular fa-user"></i>
+                    <span> Dr. Ahmed Abdul malek </span>
+                  </div>
+                </div>
+                <h4>Latest Equipments For The Heart Treatments</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod orem ipsum dolor sit amet, consetetur
+                  elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
+                  consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
+                  dolor sit amet, consetetur elitr, sed diam nonumy eirmod
+                </p>
+                <a href="" class="read_more">
+                  Read More
+                  <i class="fa-solid fa-plus"></i>
+                </a>
+              </div>
+              <!-- blog -->
+
+              <!-- blog -->
+              <div class="box">
+                <img src="media/image/blog1.png" alt="blog" />
+
+                <div class="info">
+                  <div class="date">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <span>22 may, 2022</span>
+                  </div>
+                  <div class="date">
+                    <i class="fa-regular fa-user"></i>
+                    <span> Dr. Ahmed Abdul malek </span>
+                  </div>
+                </div>
+                <h4>Latest Equipments For The Heart Treatments</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod orem ipsum dolor sit amet, consetetur
+                  elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet,
+                  consetetur sadipscing elitr, sed diam nonumy eirmod orem ipsum
+                  dolor sit amet, consetetur elitr, sed diam nonumy eirmod
+                </p>
+                <a href="" class="read_more">
+                  Read More
+                  <i class="fa-solid fa-plus"></i>
+                </a>
+              </div>
+              <!-- blog -->
+            </div>
+            <!-- sidebar -->
+          </div>
+          <!-- finish col -->
         </div>
       </div>
-    </div>
-    <!-- finish single blog section -->
+    </section>
 
-    <!-- Start pagination -->
-    <nav class="pagination_section">
-      <ul class="pagination justify-content-center">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
-    </nav>
-    <!-- finish pagination -->
+    <!-- finish form sign  -->
+    <!-- start single blog -->
+
+    <!-- start single blog -->
 
     <!-- start footer section -->
     <footer>
@@ -436,5 +498,33 @@
       </div>
     </footer>
     <!-- end footer section -->
+
+    <script>
+        const player = document.querySelector("#play-video");
+        const videoOverlay = document.querySelector("#video-overlay");
+  
+        player.addEventListener("click", function (e) {
+          e.preventDefault();
+          videoOverlay.classList.add("open");
+          videoOverlay.innerHTML +=
+            '<iframe src="media/video/header.mp4" width="853" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>';
+        });
+  
+        videoOverlay.addEventListener("click", function (e) {
+          e.preventDefault();
+          close_video();
+        });
+  
+        document.addEventListener("keyup", function (e) {
+          if (e.keyCode === 27) {
+            close_video();
+          }
+        });
+  
+        function close_video() {
+          videoOverlay.classList.remove("open");
+          videoOverlay.querySelector("iframe").remove();
+        }
+      </script>
   </body>
 </html>
